--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,23 @@
-{
+{	"name": "nextcloud/nextcloud-theme",
+	"description": "Nextcloud wordpress theme",
+	"license": "AGPL",
+	"config": {
+		"optimize-autoloader": true,
+		"classmap-authoritative": true,
+		"platform": {
+			"php": "7.4"
+		}
+	},
+	"scripts": {
+		"lint": "find . -name \\*.php -not -path './vendor/*' -not -path './build/*' -print0 | xargs -0 -n1 php -l",
+		"cs:check": "php-cs-fixer fix --dry-run --diff",
+		"cs:fix": "php-cs-fixer fix"
+	},
     "require": {
         "geoip2/geoip2": "~2.0",
         "predis/predis": "^1.1"
-    }
+    },
+    "require-dev": {
+		"nextcloud/coding-standard": "^1.0.0"
+	}
 }
