--- a/composer.json
+++ b/composer.json
@@ -11,13 +11,18 @@
 	"scripts": {
 		"lint": "find . -name \\*.php -not -path './vendor/*' -not -path './build/*' -print0 | xargs -0 -n1 php -l",
 		"cs:check": "php-cs-fixer fix --dry-run --diff",
-		"cs:fix": "php-cs-fixer fix"
+		"cs:fix": "php-cs-fixer fix",
+		"psalm": "psalm",
+		"psalm:fix": "psalm --alter --issues=InvalidReturnType,InvalidNullableReturnType,MissingParamType,InvalidFalsableReturnType",
+		"psalm:update-baseline": "psalm --threads=1 --update-baseline"
 	},
     "require": {
         "geoip2/geoip2": "~2.0",
         "predis/predis": "^1.1"
     },
     "require-dev": {
-		"nextcloud/coding-standard": "^1.0.0"
+		"nextcloud/coding-standard": "^1.0.0",
+		"vimeo/psalm": "^4.23",
+		"php-stubs/wordpress-stubs": "^6.0"
 	}
 }
