Simplify a bit the deployment
Wordpress theme editor doesn't allow to add new file so create the
config.php file already

Signed-off-by: Carl Schwan <carl@carlschwan.eu>

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,6 +40,9 @@ jobs:
         run: |
           sed -i 's/Version: 1.0/Version: ${{ github.sha }}/g' style.css
 
+      - name: Copy sample config
+        run: |
+          cp config.sample.php config.php
 
       - name: Archive production artifacts
         uses: actions/upload-artifact@v3
