--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,7 +42,7 @@ jobs:
 
       - name: Copy sample config
         run: |
-          cp config.sample.php config.php
+          cp config.example.php config.php
 
       - name: Archive production artifacts
         uses: actions/upload-artifact@v3
