Use last version of the less file
Signed-off-by: Carl Schwan <carl@carlschwan.eu>

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,6 +48,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: theme-package
+          retention-days: 1
           path: |
             dist
             *.php
