--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@ vendor
 .php-cs-fixer.cache
 config.php
 node_modules/
+assets/theme.css
+assets/theme.css.map
+dist/css/theme.min.css
+dist/css/theme.min.css.map
