--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     },
     "scripts": {
         "sass": "sass assets/theme.scss:dist/css/theme.min.css",
-        "sass:watch": "sass --watch assets/theme.scss:dist/css/theme.min.css"
+        "sass:watch": "sass --watch assets/theme.scss:dist/css/theme.min.css",
+        "sass-signup:watch": "sass --watch dist/signup/css/signup.scss:dist/signup/css/signup.css"
     },
     "engines": {
       "node": "^14.0.0",
